--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^30.12.0"
+	},
+	"dependencies": {
+		"@wordpress/components": "^29.5.0",
+		"@wordpress/icons": "^10.19.0"
 	}
 }
