--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
 		"start": "wp-scripts start --webpack-copy-php"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.12.0"
 	},
 	"dependencies": {
 		"@wordpress/components": "^29.5.0",
-		"@wordpress/icons": "^10.19.0"
+		"@wordpress/icons": "^10.19.0",
+		"@wordpress/scripts": "^30.12.0",
+		"@utrecht/component-library-react": "^10.2.0",
+		"@utrecht/component-library-css": "^7.4.0",
+		"@utrecht/design-tokens": "^3.3.0",
+		"@gemeente-denhaag/components-react": "^4.0.10",
+		"@gemeente-denhaag/design-tokens-components": "^5.0.1"
 	}
 }
